<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:context=".ui.activities.MainActivity">

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewHeaderStyle"
            android:text="@string/temp"
            android:textSize="96sp"
            android:textColor="@color/tempColor"
            android:layout_marginTop="56dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bangalore"
            android:theme="@style/TextViewNormalStyle"
            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_one"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="62dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/card_view_two">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tuesday"
                    android:gravity="center_vertical"
                    android:theme="@style/TextViewBodyStyle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_temperature"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="30dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="28"
                    android:layout_marginRight="30dp" />

                <TextView
                    android:id="@+id/text_label_degree"
                    style="@style/TextViewBodyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="\u2103"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/text_temperature"
                    app:layout_constraintTop_toTopOf="@+id/text_temperature" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_two"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/card_view_three">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvWednessday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wednesday"
                    android:gravity="center_vertical"
                    android:theme="@style/TextViewBodyStyle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_temperature_wednesday"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="28"
                    android:layout_marginRight="30dp" />

                <TextView
                    android:id="@+id/text_label_degree_wednesday"
                    style="@style/TextViewBodyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="\u2103"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/text_temperature_wednesday"
                    app:layout_constraintTop_toTopOf="@+id/text_temperature_wednesday" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_three"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/card_view_four">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thursday"
                    android:gravity="center_vertical"
                    android:theme="@style/TextViewBodyStyle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_temperature_thursday"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="28"
                    android:layout_marginRight="30dp" />

                <TextView
                    android:id="@+id/text_label_degree_thursday"
                    style="@style/TextViewBodyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="\u2103"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/text_temperature_thursday"
                    app:layout_constraintTop_toTopOf="@+id/text_temperature_thursday" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_four"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/friday"
                    android:gravity="center_vertical"
                    android:theme="@style/TextViewBodyStyle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_temperature_friday"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="28"
                    android:layout_marginRight="30dp" />

                <TextView
                    android:id="@+id/text_label_degree_friday"
                    style="@style/TextViewBodyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="\u2103"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/text_temperature_friday"
                    app:layout_constraintTop_toTopOf="@+id/text_temperature_friday" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>